public/stylesheets/application.css
#headerbar {background:#b4b5b7; padding:27px 0px; width 100%;}
#nav_r {float:right;}
#nav_l {position: absolute; top: 53px;left: 0px; z-index:4;}
#logo {text-align: center; margin: 90px auto 0px auto; width:700px; padding: 0px 30px;}
#line {height:1px; width:600px; color:#b4b5b7; background:#b4b5b7; border:none; margin:50px auto 0px auto;}
#rss {position: absolute; top: 12px; right: 115px;}
#twitter {position: absolute; top: 14px; right: 35px;}
#tabs #tab-home {position: absolute; top: 52px;left: 0px; z-index:3;}
#tabs #tab-submit {position: absolute; top: 52px;left: 128px; z-index:2;}
#tabs #tab-how-to {position: absolute; top: 52px; left: 256px; z-index:1;}
#tabs #tab-current{}
.clear {clear:both;}

/*This is the code for index*/
#content {width:700px; margin: 0px auto 0px auto; padding: 0px 30px;}
#photos {height:163px; text-align: center; background-position: top; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; text-align: center; margin: 30px 0px 50px 0px;}
#description {margin: 15px 0px 0px 0px;}
#description li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
#description_l {float:left; padding: 0px 0px 0px 180px;}
#description_r {float: right; padding: 0px 180px 0px 0px;}
.user_left {margin: 29px 15px 0px 0px;}
.user_right {margin: 29px 0px 0px 0px;}

/*This is the code for how-to*/
p.left {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7; }
p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
#left_side {float:left; width:49%; margin: 50px 0px 0px 0px;}
#left_side ul {text-align:right; font:13px century gothic,sans-serif; color:#b4b5b7;}
#left_side li {text-align:right; font:13px century gothic,sans-serif; color:#b4b5b7; padding: 0px 0px 20px 0px;}
#right_side {float:right; width:49%; margin: 50px 0px 0px 0px;}
#right_side ul {text-align:left; font:13px century gothic,sans-serif; color:#b4b5b7;}
#right_side li {text-align:left; font:13px century gothic,sans-serif; color:#b4b5b7; padding: 0px 0px 20px 0px;}
#submit_text {color:#b4b5b7; font:13px century gothic,sans-serif; text-decoration: underline;}
#wrapper {width:700px; margin: 0px auto 0px auto; padding: 0px 30px;}
#root-index {background:;}

/*This is the code for submit*/
#wrapper_st {width:700px; margin:30px auto 0px auto; padding:0px 30px;} 
#frame {height:162px; width:366px; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; float: right;}
#browse_l {float:left; padding: 20px 20px 0px 30px;}
#browse_r {float:right; padding: 20px 30px 0px 20px;}
#picture_title_l {float:left; padding: 80px 60px 0px 70px; display:inline; font:12px century gothic,sans-serif; color:#b4b5b7;}
#picture_title_r {float:right; padding: 80px 70px 0px 60px; display:inline; font:12px century gothic,sans-serif; color:#b4b5b7;}
#instructions {float:left; margin: 30px 0px 0px 25px;}
#instructions li {display:block; color:#b4b5b7; font:12px century gothic,sans-serif;}
#description_st {margin: 0px 15px 0px 350px;}
#description_st li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
#description_st_l {float:left; margin: 10px 0px 0px 0px;}
#description_st_r {float: right; margin: 10px 0px 0px 0px;}
#submit {float:left; margin:55px 0px 0px 450px; padding: 15px 0px 15px 0px; color:#b4b5b7; font:13px century gothic,sans-serif; text-decoration: none;}
#submit_text {color:#b4b5b7; font:13px century gothic,sans-serif; text-decoration: underline;}

/*This is the code for tandc  The top and bottom margin will change once it becomes a pop up*/
#wrapper_tandc {width:590px; margin: 230px auto 10px auto; padding: 35px 0px 35px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
#p1_tandc {text-align:center; margin-right:auto; margin-left:auto; margin-top: 10px; margin-bottom:10px; color:#b4b5b7; font:43px century gothic,sans-serif;}
#p2_tandc {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:13px century gothic,sans-serif;}
#tryagain {text-align:center; padding: 30px 0px 0px 0px;}

/*This is the code for success pop up  The top and bottom margin will change once it becomes a pop up*/
#content_sc {width:590px; margin: 430px auto 10px auto; padding: 20px 0px 20px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
#p1_sc {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:110px century gothic,sans-serif;}
#p2_sc {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:15px century gothic,sans-serif;}
#tryagain {text-align:center; padding: 30px 0px 0px 0px;}
#submit_text_sc {color:#b4b5b7; font:15px century gothic,sans-serif; text-decoration: underline;}

/*This is the code for failure pop up  The top and bottom margin will change once it becomes a pop up*/
#content_f {width:590px; margin: 100px auto 10px auto; padding: 0px 0px 20px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
#p1_f {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:110px century gothic,sans-serif;}
#p2_f {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:15px century gothic,sans-serif;}
#tryagain {text-align:center; padding: 30px 0px 0px 0px;}




/*This is the code for testing borders* border-style:solid; border-color:red; border-width:1px;/

